<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    > <!--tools:context="idv.ron.activitiesdemo.ResultActivity"-->

    <TextView
        android:text="@string/tvShowSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvShowAge"
        android:layout_alignRight="@+id/tvShowAge"
        android:layout_alignEnd="@+id/tvShowAge"
        android:layout_marginTop="35dp"
        android:id="@+id/tvShowSex" />

    <TextView
        android:text="@string/tvShowMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/tvShowMajor"
        android:layout_below="@+id/tvShowSex"
        android:layout_alignLeft="@+id/tvShowSex"
        android:layout_alignStart="@+id/tvShowSex" />

    <TextView
        android:text="@string/tvShowAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/tvShowAge"
        android:layout_below="@+id/tvShowName"
        android:layout_alignLeft="@+id/tvShowName"
        android:layout_alignStart="@+id/tvShowName" />

    <Button
        android:text="@string/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/btBack"
        android:layout_below="@+id/tvShowMajor"
        android:layout_toRightOf="@+id/tvShowMajor"
        android:layout_toEndOf="@+id/tvShowMajor"
        android:onClick="onBackClick"/>

    <TextView
        android:text="@string/tvShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="95dp"
        android:id="@+id/tvShowName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edAddName"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@+id/tvShowName"
        android:layout_alignBottom="@+id/tvShowName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edAddAge"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@+id/tvShowAge"
        android:layout_alignBottom="@+id/tvShowAge"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edAddSex"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@+id/tvShowSex"
        android:layout_alignBottom="@+id/tvShowSex"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edAddMajor"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@+id/tvShowMajor"
        android:layout_alignBottom="@+id/tvShowMajor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edAddName"
        android:layout_alignRight="@+id/btBack"
        android:layout_alignEnd="@+id/btBack"
        android:id="@+id/tvIndex" />
</RelativeLayout>
